; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/util/extr_var.c_pull_varattnos.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/util/extr_var.c_pull_varattnos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pull_varattnos(i32* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32** %2, i32*** %6, align 8
  %8 = load i32**, i32*** %6, align 8
  %9 = load i32*, i32** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  store i32* %9, i32** %10, align 8
  %11 = load i32, i32* %5, align 4
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  store i32 %11, i32* %12, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @pull_varattnos_walker(i32* %13, %struct.TYPE_3__* %7)
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = load i32**, i32*** %6, align 8
  store i32* %16, i32** %17, align 8
  ret void
}

declare dso_local i32 @pull_varattnos_walker(i32*, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
